# large_cbt

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
3rd/include/: CatmullClarkTessellation.h  ccmesh.h  spng.h
3rd/include/libtiff/: tif_config.h  tiffconf.h
3rd/lib/Debug/: spng.lib  tiffd.exp  tiffd.lib  tiffxxd.lib  zlib.lib
3rd/lib/Release/: dxcompiler.lib  spng.lib  tiff.exp  tiff.lib  tiffxx.lib  zlib.lib
cmake/: CMakeBuildSettings.cmake  CMakeCompiler.cmake  CMakeMacros.cmake  CMakePlatforms.cmake  FindD3D12.cmake
demo/include/cbt/: bisector.h  cbt.h  cbt_utility.h  leb_matrix_cache.h  ocbt_128k.h  ocbt_1m.h  ocbt_256k.h  ocbt_512k.h  ocbt_generic.h
demo/include/graphics/: descriptors.h  dx12_backend.h  dx12_containers.h  dx12_helpers.h  event_collector.h  types.h
demo/include/imgui/: imgui.h  imgui_wrapper.h
demo/include/math/: cubic_spline.h  operators.h  types.h
demo/include/mesh/: cpu_mesh.h  mesh.h  mesh_updater.h
demo/include/moon/: moon_deformer.h  moon_material.h
demo/include/render_pipeline/: camera.h  camera_controller.h  constant_buffers.h  constants.h  cubemap.h  earth_renderer.h  moon_renderer.h  planet.h  sky.h  space_renderer.h  stencil_usage.h  update_properties.h
demo/include/rendering/: frustum.h
demo/include/tools/: mip_builder.h  profiling_helper.h  security.h  shader_utils.h  string_utilities.h  texture_utils.h
demo/include/water/: water_data.h  water_deformer.h  water_simulation.h
demo/src/: CMakeLists.txt
demo/src/cbt/: cbt.cpp  cbt_utility.cpp  leb_matrix_cache.cpp  ocbt_128k.cpp  ocbt_1m.cpp  ocbt_256k.cpp  ocbt_512k.cpp
demo/src/graphics/: dx12_backend_command_buffer.cpp  dx12_backend_command_queue.cpp  dx12_backend_compute_shader.cpp  dx12_backend_fence.cpp  dx12_backend_graphics_device.cpp  dx12_backend_graphics_pipeline.cpp  (+6 more)
models/: icosahedron.ccm
paths/: loop_demo.csv
projects/: CMakeLists.txt  outer_space.cpp
shaders/: Blit.graphics  BuildMips.compute  EvaluateSurfaceGradients.compute  PlanetGeometry.compute  UpdateMesh.compute
shaders/Earth/: ForwardPassImpostor.graphics  MaterialPass.compute  SolidWire.graphics
shaders/Moon/: ForwardPassImpostor.graphics  MaterialPass.compute  MoonDeformation.compute  SolidWire.graphics
shaders/Sky/: RenderCubemap.graphics  RenderSky.graphics  RenderSkyFast.graphics  SkyPreCompute.compute
shaders/Visibility/: VisibilityPass.graphics  VisibilityPassRT.compute
shaders/Water/: FourierTransform.compute  WaterDeformation.compute  WaterSimulation.compute
shaders/shader_lib/: bisector.hlsl  bsdf.hlsl  color.hlsl  common.hlsl  constant_buffers.hlsl  disney.hlsl  displacement_utilities.hlsl  double_math.hlsl  earth_utilities.hlsl  frustum_culling.hlsl  leb.hlsl  lighting_evaluation.hlsl  mesh_utilities.hlsl  moon_detail.hlsl  moon_detail_normal.hlsl  ocbt_128k.hlsl  ocbt_1m.hlsl  ocbt_256k.hlsl  ocbt_512k.hlsl  ocbt_generic.hlsl  oren_nayar.hlsl  sampling.hlsl  sg_utilities.hlsl  sky_utilities.hlsl  transform.hlsl  update_mesh_root_signature.hlsl  update_utilities.hlsl  visibility_buffer.hlsl  water_utilities.hlsl
textures/moon_textures/: elevation.tif
(+33 files in other folders)
